objects/Order__x.object
<CustomObject>
    <fields>
        <fullName>customerID__c</fullName>
        <description>customerID</description>
        <externalDeveloperName>customerID</externalDeveloperName>
        <label>CustomerID</label>
        <length>18</length>
        <referenceTargetField>Account.Customer_ID__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>orderDate__c</fullName>
        <description>orderDate</description>
        <externalDeveloperName>orderDate</externalDeveloperName>
        <label>OrderDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>orderID__c</fullName>
        <description>orderID</description>
        <externalDeveloperName>orderID</externalDeveloperName>
        <label>OrderID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shippedDate__c</fullName>
        <description>shippedDate</description>
        <externalDeveloperName>shippedDate</externalDeveloperName>
        <label>ShippedDate</label>
        <type>DateTime</type>
    </fields>
</CustomObject>